--- a/template/template/template_md.html
+++ b/template/template/template_md.html
@@ -25,7 +25,7 @@
 <body>
 <div class="reveal">
     <div class="slides">
-        <section data-markdown="xxx.md"
+        <section data-markdown="md/xxx.md"
                  data-separator="^\r?\n---\r?\n$"
                  data-separator-vertical="^\r?\n--\r?\n$"
                  data-separator-notes="^Note:"
