--- a/template/template_md.html
+++ b/template/template_md.html
@@ -6,7 +6,7 @@
 
     <title>reveal.js</title>
 
-    <link rel="shortcut icon" href="shortcut.png">
+    <link rel="shortcut icon" href="/shortcut.png">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link id="theme" rel="stylesheet" href="../revealjs/css/theme/black.css">
 
